fix alignment of widget with control panel buttons

--- a/src/main/resources/src/components/MainPage/GeneralPage/MainPageWorkspace/MainPageWorkspace.scss
+++ b/src/main/resources/src/components/MainPage/GeneralPage/MainPageWorkspace/MainPageWorkspace.scss
@@ -8,4 +8,7 @@
   flex-wrap: wrap;
   align-items: stretch;
   margin-top: 10px;
+  padding: 0 10px;
+  padding-left: 12px;
+  box-sizing: border-box;
 }
